third_party/move/tools/move-decompiler/tests/compiler-v2-test/deprecated/deprecated_placement_module_members.exp
module 0x41::N {
    struct S has drop {
    }
    public fun bar(): S {
        S{}
    }
    public fun consume(_x: S) {
        ()
    }
}

module 0x42::M {
    use 0x41::N;
    struct S {
    }
    public fun foo(): N::S {
        N::bar()
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    use 0x41::N;
    use 0x42::M;
    public entry fun <SELF>_0() {
        N::consume(M::foo());
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ deprecated_placement_module_members.move:21:76
   │
21 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
   │                                                                            ^
   │                                                                            │
   │                                                                            Unexpected '<'
   │                                                                            Expected an identifier
